--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 
-server.port=8090
+server.port=20000
 server.servlet.encoding.force=true
 
 # 2022.10.28[프뚜]: Datasource Configuration
 spring.datasource.hikari.maximum-pool-size=4
-spring.datasource.url=jdbc:postgresql://35.203.21.248:8080/postgres
+spring.datasource.url=jdbc:postgresql://http://35.203.21.248/postgres
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
