--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ server.servlet.encoding.force=true
 
 # 2022.10.28[프뚜]: Datasource Configuration
 spring.datasource.hikari.maximum-pool-size=4
-spring.datasource.url=jdbc:postgresql://http://35.203.21.248/postgres
+spring.datasource.url=jdbc:postgresql://http://35.234.246.47/postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
