--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-server.port=20002
+server.port=8080
 server.servlet.encoding.force=true
 
 # 2022.10.28[프뚜]: Datasource Configuration
@@ -24,4 +24,4 @@ spring.thymeleaf.cache= false
 spring.jpa.properties.hibernate.format_sql=true
 
 # 바인딩되는 파라미터 값 출력
-logging.level.org.hibernate.type.descriptor.sql=trace
+#logging.level.org.hibernate.type.descriptor.sql=trace
